--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <nav class="col-8">
                 <ul>
-                    <li><a href="/group">Сообщества</a> </li>
+                    <li><a href="/groups">Сообщества</a> </li>
                     <li>
                         <div th:switch="${userLogin}">
                             <div th:case="null">
