--- a/src/main/resources/static/group.css
+++ b/src/main/resources/static/group.css
@@ -1,7 +1,8 @@
 /* Общие стили страниц */
-*{
+* {
     font-family: 'Comfortaa', sans-serif;
 }
+
 html,
 h1,
 h2,
@@ -11,12 +12,15 @@ h5,
 h6 {
     color: #5c5b5b
 }
-p{
+
+p {
     color: var(--text-color);
 }
+
 body {
     background: #f6f6f6;
 }
+
 a {
     text-decoration: none;
     color: inherit;
@@ -29,6 +33,7 @@ a {
     margin-top: 30px;
     border-radius: 20px;
 }
+
 .group_div2 {
     background: var(--main-color);
     height: 90px;
@@ -36,6 +41,7 @@ a {
     border-radius: 20px;
     text-align: left;
 }
+
 .margin-top-20 {
     margin-top: 20px;
 }
@@ -54,14 +60,16 @@ a {
     margin-left: 50px;
     border-radius: 20px;
 }
-.recommend_div3{
+
+.recommend_div3 {
     background: var(--background-color);
-    height: 100px;
+    height: 90px;
     width: 350px;
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 20px;
+    padding: 5px;
 }
 
 .line_block {
@@ -78,6 +86,7 @@ a {
 
 .recommend_p_no_color {
     margin-top: -10px;
+    color: var(--main-color);
 }
 
 .recommend_div2 {
@@ -86,7 +95,8 @@ a {
     margin-top: 50px;
     border-radius: 20px;
 }
-.recommend_div2 p{
+
+.recommend_div2 p {
     margin-top: 5px;
     font-size: 24px;
 }
@@ -94,21 +104,34 @@ a {
 .figure_div {
     object-fit: cover;
     object-position: center;
-    border-radius:50%;
+    border-radius: 50%;
     width: 130px;
     height: 130px;
     margin-top: 50px;
     margin-left: 35px;
     background: white;
 }
+
 .figure_img {
     object-fit: cover;
     object-position: center;
-    border-radius:50%;
+    border-radius: 50%;
     background: white;
     height: 150px;
     width: 150px;
     border: 3px solid #fff;
+    transition: background ease-out 200ms;
+}
+
+.figure_img_group_list {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    background: white;
+    height: 80px;
+    width: 80px;
+    border: 3px solid #fff;
+    margin-left: 5px;
     transition: background ease-out 200ms;
 }
 
@@ -141,7 +164,6 @@ a {
 }
 
 
-
 /* Стили для подвала */
 .footer {
     background-color: #333;
@@ -152,6 +174,7 @@ a {
     width: 100%;
     height: 40px;
 }
+
 /*Стиль выбора цвета*/
 label {
     font-family: sans-serif;
@@ -159,17 +182,20 @@ label {
     display: block;
     position: relative;
 }
+
 input {
     padding: 5px 15px;
     font-size: 16px;
     width: 100%;
     box-sizing: border-box;
 }
+
 input[type=color] {
     padding: 0;
     border: 0;
     height: 40px;
 }
+
 input[type=color]:after {
     content: attr(data-value);
     position: absolute;
@@ -179,13 +205,15 @@ input[type=color]:after {
     display: block;
     width: 100%;
 }
+
 .color-icon {
     position: absolute;
     bottom: 10px;
     right: 10px;
     color: #666;
 }
-#primary_color{
+
+#primary_color {
     border: 3px solid #fff;
     border-radius: 50%;
     height: 60px;
@@ -197,11 +225,13 @@ input[type=color]:after {
 #primary_color::-webkit-color-swatch-wrapper {
     padding: 0;
 }
+
 #primary_color::-webkit-color-swatch {
     border: none;
     border-radius: 50%;
 }
-#second_color{
+
+#second_color {
     border: 3px solid #fff;
     border-radius: 50%;
     height: 60px;
@@ -213,14 +243,16 @@ input[type=color]:after {
 #second_color::-webkit-color-swatch-wrapper {
     padding: 0;
 }
+
 #second_color::-webkit-color-swatch {
     border: none;
     border-radius: 50%;
 }
+
 #avatar {
     object-fit: cover;
     object-position: center;
-    border-radius:50%;
+    border-radius: 50%;
     margin-left: 35px;
     background: white;
     height: 150px;
