--- a/src/main/resources/static/groups.css
+++ b/src/main/resources/static/groups.css
@@ -1,31 +1,26 @@
-*{
+* {
     font-family: 'Comfortaa', sans-serif;
 }
-.recommend_div3{
-    background: #ffffff;
-    height: 100px;
-    width: 500px;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    border-radius: 20px;
-}
+
 .recommend_div {
     background: var(--second-color);
-    height: 100%;
+    height: 600px;
     margin-top: 30px;
     margin-left: 50px;
     border-radius: 20px;
 }
-.recommend_div3{
+
+.recommend_div3 {
     background: #ffffff;
-    height: 100px;
-    width: 350px;
+    height: 90px;
+    width: 355px;
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 20px;
+    padding: 5px;
 }
+
 .recommend_div2_no_color {
     height: 72px;
     margin-top: 50px;
@@ -43,14 +38,29 @@
     margin-top: 50px;
     border-radius: 20px;
 }
-.recommend_div2 p{
+
+.recommend_div2 p {
     margin-top: 5px;
     font-size: 24px;
 }
+
 .line_block {
     border-bottom: 3px solid var(--main-color);
-    width: 400px;
+    width: 100%;
 }
+
+.figure_img_group_list {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    background: white;
+    height: 80px;
+    width: 80px;
+    border: 3px solid #fff;
+    margin-left: 5px;
+    transition: background ease-out 200ms;
+}
+
 /* Стили для подвала */
 .footer {
     background-color: #333;
