--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>IG</title>
-    <link rel="stylesheet" th:href="@{/group.css}"/>
+    <link rel="stylesheet" th:href="@{/groups.css}"/>
     <link rel="stylesheet" th:href="@{/color.css}"/>
     <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -56,7 +57,50 @@
 <div class="container text-center account_form">
     <div class="row row-cols-auto">
         <div class="col-8">
-            <!--Пост-->
+            <!--Поиск-->
+            <div class="recommend_div">
+                <div class="recommend_div2_no_color">
+                    <br/>
+                    <p class="recommend_p_no_color">Поиск</p>
+                </div>
+                <hr class="line_block"/>
+                <table>
+                    <tbody>
+                    <tr th:if="${groups.isEmpty()}">
+                        </br>
+                        <p style="justify-content: center;"> Нет сообществ </p>
+                    </tr>
+                    <tr th:each="group : ${groups}">
+                        <td>
+                            <div class="recommend_div3">
+                                <form id="groupForm" action="#"
+                                      th:action="@{/group/{id}(id=${group.getId()})}" method="get">
+                                    <div class="row" onClick="document.forms['groupForm'].submit();">
+                                        <div class="col-2 col-md-1">
+                                            <img class="figure_img_group_item_list" alt="image" th:src="${group.getAvtar()}"/>
+                                        </div>
+                                        <div class="col align-self-center">
+                                            <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                            <div class="main_div_item_list">
+                                                <div class="icon_div_item_list">
+                                                    <i class="fa-solid fa-user"></i></div>
+                                                <div class="subscribes_div_item_list">
+                                                    <p class="subscribes_p_item_list" th:text="${group.getSubscribes()}"></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <!--Список сообществ пользователя-->
             <div class="recommend_div">
                 <div class="recommend_div2_no_color">
                     <br/>
@@ -72,54 +116,24 @@
                     <tr th:each="group : ${groups}">
                         <td>
                             <div class="recommend_div3">
-                                <form id="groupForm" action="#"
+                                <form id="groupForm2" action="#"
                                       th:action="@{/group/{id}(id=${group.getId()})}" method="get">
-                                    <div class="row" onClick="document.forms['groupForm'].submit();">
-                                        <div class="col-1">
-                                            <img class="figure_img" style="width: 80px; height: 80px; margin-left: 5px"
-                                                 alt="image" th:src="${group.getAvtar()}"/>
+                                    <div class="row" onClick="document.forms['groupForm2'].submit();">
+                                        <div class="col-2 col-md-1">
+                                            <img class="figure_img_group_item_list" alt="image" th:src="${group.getAvtar()}"/>
                                         </div>
-                                        <div class="col-4 col-md-9">
-                                            <p style="font-size: 20px" th:text="${group.getName()}"> Имя </p>
-                                            <p th:text="${group.getSubscribes()}"> Подписки </p>
+                                        <div class="col align-self-center">
+                                            <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                            <div class="main_div_item_list">
+                                                <div class="icon_div_item_list">
+                                                    <i class="fa-solid fa-user"></i></div>
+                                                <div class="subscribes_div_item_list">
+                                                    <p class="subscribes_p_item_list" th:text="${group.getSubscribes()}"></p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </form>
-                            </div>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <!--Список сообществ-->
-            <div class="recommend_div">
-                <div class="recommend_div2_no_color">
-                    <br/>
-                    <p class="recommend_p_no_color">Рекомендации</p>
-                </div>
-                <hr class="line_block"/>
-                <table>
-                    <tbody>
-                    <tr th:if="${groups.isEmpty()}">
-                        </br>
-                        <p style="justify-content: center;"> Нет сообществ </p>
-                    </tr>
-                    <tr th:each="group : ${groups}">
-                        <td>
-                            <div class="recommend_div3">
-                                <div class="row">
-                                    <div class="col-1">
-                                        <img class="figure_img" style="width: 80px; height: 80px; margin-left: 5px"
-                                             alt="image" th:src="${group.getAvtar()}"/>
-                                    </div>
-                                    <div class="col-4 col-md-9">
-                                        <p style="font-size: 20px" th:text="${group.getName()}"> Имя </p>
-                                        <p th:text="${group.getSubscribes()}"> Подписки </p>
-                                    </div>
-                                </div>
                             </div>
                         </td>
                     </tr>
