--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -206,7 +206,7 @@ input[type=color]:after {
     object-position: center;
     border-radius:50%;
     margin-left: 35px;
-    background: white;
+    background: var(--background-color);
     height: 150px;
     width: 150px;
     border: 3px solid var(--background-color);
