--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" th:href="@{/style.css}" />
     <link rel="stylesheet" th:href="@{/color.css}" />
     <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/search.css}"/>
+    <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -20,14 +22,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
 </head>
-<body style="background: var(--background-color);">
 <header class="container-fluid">
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-7">
                 <h1><a href="/">IG</a></h1>
             </div>
-            <nav class="col-8">
+            <div class="col-1">
+                <div class="flexbox">
+                    <div class="search">
+                        <div>
+                            <input type="text" placeholder="Поиск..." required>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <nav class="col-4">
                 <ul>
                     <li><a href="/groups">Сообщества</a> </li>
                     <li>
@@ -52,82 +62,9 @@
         </div>
     </div>
 </header>
+<body style="background: var(--background-color);">
 
-<div th:switch="${userLogin}">
-    <h2 th:case="null">No login.</h2>
-    <div th:case="*">
-        <p th:text="${userLogin.login}"/>
-    </div>
-</div>
-
-
-<div th:switch="${users}">
-    <div class="row">
-        <div>
-            <h2 th:case="null">No Users.</h2>
-            <div th:case="*">
-                <h2>Users</h2>
-                <table border="1">
-                    <thead>
-                    <tr>
-                        <th>login</th>
-                        <th>email</th>
-                        <th>password</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.login}"></td>
-                        <td th:text="${user.email}"></td>
-                        <td th:text="${user.password}"></td>
-                        <td>
-                            <a th:href="@{/edit/{id}(id=${user.id})}">EDIT</a>
-                        </td>
-                        <td>
-                            <a th:href="@{/delete/{id}(id=${user.id})}">DELETE</a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <p>
-                <a href="/new">Add User</a>
-            </p>
-        </div>
-    </div>
-</div>
 </body>
-<script>
-    function getCookie(name) {
-        name = name + "=";
-        var cookies = document.cookie.split(';');
-        for(var i = 0; i <cookies.length; i++) {
-            var cookie = cookies[i];
-            while (cookie.charAt(0)==' ') {
-                cookie = cookie.substring(1);
-            }
-            if (cookie.indexOf(name) == 0) {
-                return cookie.substring(name.length,cookie.length);
-            }
-        }
-        return "";
-    }
-    document.addEventListener('DOMContentLoaded', function() {
-        document.documentElement.style.setProperty('--main-color', getCookie("mainColor"));
-        document.documentElement.style.setProperty('--second-color', getCookie("secondColor"));
-        if (getCookie("theme") === "white"){
-            document.documentElement.style.setProperty('--background-color', "#fff");
-            document.documentElement.style.setProperty('--text-color', "#000");
-        }
-        else{
-            document.documentElement.style.setProperty('--background-color', "#28292c");
-            document.documentElement.style.setProperty('--text-color', "#fff");
-        }
-        document.getElementsByTagName("html")[0].style.visibility = "visible";
-    }, false);
-</script>
 <footer role="contentinfo">
     <div id="site_footer" style="background: black;">
         <div class="container">
