--- a/src/main/resources/static/groups.css
+++ b/src/main/resources/static/groups.css
@@ -13,7 +13,7 @@
 .recommend_div3 {
     background: #ffffff;
     height: 90px;
-    width: 355px;
+    width: 340px;
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
@@ -59,6 +59,18 @@
     border: 3px solid #fff;
     margin-left: 5px;
     transition: background ease-out 200ms;
+}
+.no-button{
+    background: transparent;
+    border: none !important;
+    height: 90px;
+    width: 355px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 20px;
+    padding: 5px;
+    font-size:0;
 }
 
 /* Стили для подвала */
