--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -30,7 +30,7 @@
             </div>
             <nav class="col-8">
                 <ul>
-                    <li><a href="/group">Сообщества</a></li>
+                    <li><a href="/groups">Сообщества</a></li>
                     <li>
                         <div th:switch="${userLogin}">
                             <div th:case="null">
@@ -119,26 +119,30 @@
                     </tr>
                     <tr th:each="group : ${groups}">
                         <td>
-                            <div class="recommend_div3">
-                                <form id="groupForm" action="#"
-                                      th:action="@{/group/{id}(id=${group.getId()})}" method="get">
-                                    <div class="row" onClick="document.forms['groupForm'].submit();">
-                                        <div class="col-2 col-md-1">
-                                            <img class="figure_img_group_item_list" alt="image" th:src="${group.getAvtar()}"/>
-                                        </div>
-                                        <div class="col align-self-center">
-                                            <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                            <div class="main_div_item_list">
-                                                <div class="icon_div_item_list">
-                                                    <i class="fa-solid fa-user"></i></div>
-                                                <div class="subscribes_div_item_list">
-                                                    <p class="subscribes_p_item_list" th:text="${group.getSubscribes()}"></p>
+                            <form id="groupForm" action="#"
+                                  th:action="@{/group/{id}(id=${group.getId()})}" method="get">
+                                <button type="submit" class="no-button">
+                                    <div class="recommend_div3">
+                                        <div class="row">
+                                            <div class="col-2 col-md-1">
+                                                <img class="figure_img_group_item_list" alt="image"
+                                                     th:src="${group.getAvtar()}"/>
+                                            </div>
+                                            <div class="col align-self-center">
+                                                <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                                <div class="main_div_item_list">
+                                                    <div class="icon_div_item_list">
+                                                        <i class="fa-solid fa-user"></i></div>
+                                                    <div class="subscribes_div_item_list">
+                                                        <p class="subscribes_p_item_list"
+                                                           th:text="${group.getSubscribes()}"></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </form>
-                            </div>
+                                </button>
+                            </form>
                         </td>
                     </tr>
                     </tbody>
