--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>IG</title>
     <link rel="stylesheet" th:href="@{/groups.css}"/>
     <link rel="stylesheet" th:href="@{/color.css}"/>
     <link rel="stylesheet" th:href="@{/header.css}"/>
     <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
+    <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -60,8 +61,21 @@
             <!--Поиск-->
             <div class="recommend_div">
                 <div class="recommend_div2_no_color">
-                    <br/>
-                    <p class="recommend_p_no_color">Поиск</p>
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="flexbox">
+                                <div class="search" style="margin: 20px;">
+                                    <div>
+                                        <input type="text" placeholder="Поиск..." required>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <br/>
+                            <p class="recommend_p_no_color">Поиск</p>
+                        </div>
+                    </div>
                 </div>
                 <hr class="line_block"/>
                 <table>
@@ -72,26 +86,30 @@
                     </tr>
                     <tr th:each="group : ${groups}">
                         <td>
-                            <div class="recommend_div3">
-                                <form id="groupForm" action="#"
-                                      th:action="@{/group/{id}(id=${group.getId()})}" method="get">
-                                    <div class="row" onClick="document.forms['groupForm'].submit();">
-                                        <div class="col-2 col-md-1">
-                                            <img class="figure_img_group_item_list" alt="image" th:src="${group.getAvtar()}"/>
-                                        </div>
-                                        <div class="col align-self-center">
-                                            <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                            <div class="main_div_item_list">
-                                                <div class="icon_div_item_list">
-                                                    <i class="fa-solid fa-user"></i></div>
-                                                <div class="subscribes_div_item_list">
-                                                    <p class="subscribes_p_item_list" th:text="${group.getSubscribes()}"></p>
+                            <form id="groupForm" action="#"
+                                  th:action="@{/group/{id}(id=${group.getId()})}" method="get">
+                                <button type="submit" class="no-button">
+                                    <div class="recommend_div3">
+                                        <div class="row">
+                                            <div class="col-2 col-md-1">
+                                                <img class="figure_img_group_item_list" alt="image"
+                                                     th:src="${group.getAvtar()}"/>
+                                            </div>
+                                            <div class="col align-self-center">
+                                                <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                                <div class="main_div_item_list">
+                                                    <div class="icon_div_item_list">
+                                                        <i class="fa-solid fa-user"></i></div>
+                                                    <div class="subscribes_div_item_list">
+                                                        <p class="subscribes_p_item_list"
+                                                           th:text="${group.getSubscribes()}"></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </form>
-                            </div>
+                                </button>
+                            </form>
                         </td>
                     </tr>
                     </tbody>
@@ -115,26 +133,30 @@
                     </tr>
                     <tr th:each="group : ${groups}">
                         <td>
-                            <div class="recommend_div3">
-                                <form id="groupForm2" action="#"
-                                      th:action="@{/group/{id}(id=${group.getId()})}" method="get">
-                                    <div class="row" onClick="document.forms['groupForm2'].submit();">
-                                        <div class="col-2 col-md-1">
-                                            <img class="figure_img_group_item_list" alt="image" th:src="${group.getAvtar()}"/>
-                                        </div>
-                                        <div class="col align-self-center">
-                                            <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                            <div class="main_div_item_list">
-                                                <div class="icon_div_item_list">
-                                                    <i class="fa-solid fa-user"></i></div>
-                                                <div class="subscribes_div_item_list">
-                                                    <p class="subscribes_p_item_list" th:text="${group.getSubscribes()}"></p>
+                            <form id="groupForm2" action="#"
+                                  th:action="@{/group/{id}(id=${group.getId()})}" method="get">
+                                <button type="submit" class="no-button">
+                                    <div class="recommend_div3">
+                                        <div class="row">
+                                            <div class="col-2 col-md-1">
+                                                <img class="figure_img_group_item_list" alt="image"
+                                                     th:src="${group.getAvtar()}"/>
+                                            </div>
+                                            <div class="col align-self-center">
+                                                <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                                <div class="main_div_item_list">
+                                                    <div class="icon_div_item_list">
+                                                        <i class="fa-solid fa-user"></i></div>
+                                                    <div class="subscribes_div_item_list">
+                                                        <p class="subscribes_p_item_list"
+                                                           th:text="${group.getSubscribes()}"></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </form>
-                            </div>
+                                </button>
+                            </form>
                         </td>
                     </tr>
                     </tbody>
