--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/account.css}"/>
     <link rel="stylesheet" th:href="@{/color.css}"/>
     <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
@@ -25,12 +26,26 @@
 <header class="container-fluid">
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-1">
                 <h1><a href="/">IG</a></h1>
             </div>
-            <nav class="col-8">
+            <div class="col-3">
+                <img src="/image/cat-icon.png" alt="Тут должна сидеть кошка!" height="95px" style="margin-top: -15px; margin-left: -50px;"/>
+            </div>
+            <div class="col-3">
+            </div>
+            <div class="col-1">
+                <div class="flexbox">
+                    <div class="search">
+                        <div>
+                            <input type="text" placeholder="Поиск..." required>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <nav class="col-4">
                 <ul>
-                    <li><a href="/groups">Сообщества</a></li>
+                    <li><a href="/groups">Сообщества</a> </li>
                     <li>
                         <div th:switch="${userLogin}">
                             <div th:case="null">
