--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,8 +25,13 @@
 <header class="container-fluid">
     <div class="container">
         <div class="row">
-            <div class="col-7">
+            <div class="col-1">
                 <h1><a href="/">IG</a></h1>
+            </div>
+            <div class="col-3">
+                <img src="/image/cat-icon.png" alt="Тут должна сидеть кошка!" height="95px" style="margin-top: -15px; margin-left: -50px;"/>
+            </div>
+            <div class="col-3">
             </div>
             <div class="col-1">
                 <div class="flexbox">
